[package]
name = "gx21m15"
version = "0.1.1"
authors = ["Ivan Li <ivanli2048@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A GX21M15 driver based on embedded-hal. Support `async` and `sync` features. "
keywords = ["temperature-sensor", "embedded-hal-driver", "no-std", "gx21m15", "async"]
repository = "https://github.com/IvanLi-CN/gx21m15-rs"

[dependencies]
log = { version = "0.4.22" }

embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async-cfg = "0.2.5"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 0

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
async = ["dep:embedded-hal-async"]
